2005-03-25  Kristof Vansant  <de_lupus@pandora.be>

	reviewed by: Mikael Hallendal

	* autogen.sh:
	* configure.in:
	- Depend on GTK+ 2.6
	- Remove dependency on libgnome(ui).
	* src/dh-html.c:
	* src/dh-keyword-model.c:
	* src/dh-main.c: (main):
	* src/dh-parser.c:
	* src/dh-search.c:
	* src/dh-util.c: (dh_dot_dir):
	* src/dh-window.c: (window_activate_about):
	- Use GTK+ for about box instead of libgnomeui.
	- Fixed #167213.

2004-12-01  Mikael Hallendal  <micke@imendio.com>

	* src/dh-html.c: 
	(html_child_grab_focus_cb), (html_child_add_cb),
	(html_child_remove_cb), (html_init):
	- Patch from Tommi Komulainen to avoid the HTML widget from stealing
	  focus after loading a page (taken from Galeon).

2004-11-25  Christoffer Olsen  <co@deworks.net>

	* configure.in: Added devhelp.desktop.in to AC_OUTPUT
	* devhelp.desktop.in: Moved to devhelp.desktop.in.in
	* devhelp.desktop.in.in: Added Bugzilla headers
	* po/POTFILES.in: Now references devhelp.desktop.in.in instead

	- Added Bug Buddy autocompletion support, filing bugs should
	now work magically.

2004-11-18  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:	Remove some unnecessary checks.
	* src/dh-gecko-utils.cpp: Make it build with latest mozilla trunk.
	Fixes bug #158619.

2004-11-16  Mikael Hallendal  <micke@imendio.com>

	* contrib/CHM_HTB2devhelp.README: José Fonseca, Bug #133110
	* contrib/README:
	* contrib/bulkman.pl:  Marc Britten, Bug #144917
	* contrib/texi2devhelp.sh: Tobias Gruetzmacher, Bug #138847
        * contrib/Makefile.am: Added
        * configure.in:
        * Makefile.am
        - Added user contributed conversion scripts.

2004-10-22  Mikael Hallendal  <micke@imendio.com>

	* Release 0.9.3

	* configure.in: Bumped version 
        * NEWS: Updated for 0.9.3

2004-10-21  Richard Hult  <richard@imendio.com>

	* src/dh-html.c (dh_html_open_uri): Fix compiler warning.

2004-10-21  Mikael Hallendal  <micke@imendio.com>

	* configure.in:
	* src/Makefile.am:
	* src/dh-gecko-utils.cpp: